updated images and pages

--- a/hindi.html
+++ b/hindi.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>lsg vs mi</h2>
+  <h2>csk vs dc</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -106,52 +106,11 @@
     <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
     Join us on Telegram chnanel
   </a>
-  <h2>player 3</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239054&hd=1"
-    allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0"
-    allowfullscreen></iframe>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <h2>player 4</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-
-  <iframe src="https://iframv2.embedxt.site/iframe/frame.php" title="Video Player 2" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-    loading="lazy">
-  </iframe>
-  <br>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
   <br>
   <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
-  <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player 3" frameborder="0"
+  <iframe src="https://ifarma.embedct.space/iframe/frame.php" title="Video Player 3" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe>
   <br>
