--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/KzwDBfYH/mivs-lsg.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/Dgkp8dzV/csk-vs-dc.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
   </a>
 
   <a href="hindi4k.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/6JpDB1Gr/IPL-2023-Match-37-RR-imresizer.png" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/Dfff9FBm/rrvspbks.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 2 hindi</div>
     </div>
