--- a/hindi.html
+++ b/hindi.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>csk vs dc</h2>
+  <h2>srh vs gt</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -91,7 +91,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
+  <iframe src="https://iplbynewbienoob.netlify.app/test?url=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743952677~acl=/*~hmac=446dc4d40a3def3fa808c43ab86b77eee00d0c0c5ddc49bf02a46ea7e4352c09" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
@@ -183,7 +183,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
+  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
