--- a/crichd.html
+++ b/crichd.html
@@ -32,10 +32,10 @@
     <script>
         const playerContainerId = 'player';
         const apiUrl = 'https://maxplay-tv.fun/cric.php?id=starhindi';
-        const directM3u8Url = 'https://off1.dunyapurkaraja.com:1686/hls/starhindi.m3u8?md5=p99AG0dgfFFJ0UE9xqsSpw&expires=1743685958';
+        const directM3u8Url = 'https://jf7.dunyapurkaraja.com:999/hls/starhindi.m3u8?md5=bfJzCjAaxGhsWsxgqzlXEw&expires=1743954862';
         const useApi = true; // Set to false to use direct URL
         const streamTitle = "star sports 1 hindi crichd";
-        const refreshInterval = 30000; // Refresh stream URL every 60 seconds (adjust as needed)
+        const refreshInterval = 60000; // Refresh stream URL every 60 seconds (adjust as needed)
         let playerInstance = null; // To hold the JWPlayer instance
 
         function setupPlayer(m3u8Url) {
