--- a/hindi.html
+++ b/hindi.html
@@ -183,7 +183,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
+  <iframe src="crichd.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
