--- a/hindi.html
+++ b/hindi.html
@@ -91,7 +91,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="https://iplbynewbienoob.netlify.app/test?url=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743967078~acl=/*~hmac=f82c1362060db918fd48ce5eef5b9adc7a50302a97ba0d666a2f969d9625a2e2" title="Video Player 2" frameborder="0"
+  <iframe src="https://iplbynewbienoob.netlify.app/test?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
@@ -107,7 +107,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 5</h2>
+  <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <iframe src="https://ifarma.embedct.space/iframe/frame.php" title="Video Player 3" frameborder="0"
@@ -127,7 +127,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>Player 6</h2>
+  <h2>Player 4</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> 
   <div id="wrapper_tsport1">
@@ -179,7 +179,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 7</h2>
+  <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
@@ -201,7 +201,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 8</h2>
+  <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
