--- a/hindi.html
+++ b/hindi.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>srh vs gt</h2>
+  <h2>mi vs rcb</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -87,11 +87,11 @@
   <br>
 
   <br>
-  <h2>player 2</h2>
+  <h2>player 2 (audio boost in audio setting)</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="https://iplbynewbienoob.netlify.app/test?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
+  <iframe src="test.html?url=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1744043422~acl=/*~hmac=e9e70c2664c61bd1f6e076efc88c3635b9c5bc363867890ad3c9c6f18a102976" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
@@ -138,7 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
       try {
         var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8",
+          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17436002443600~hmac=1fdfe8ddcbf56e3eefcb254f9facdca9e6fce112f92dcf335b77a9a930116421",
           width: "100%",
           aspectratio: "16:9",
           preload: "metadata",
@@ -183,7 +183,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="crichd.html" title="Video Player 2" frameborder="0"
+  <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
