--- a/hindi.html
+++ b/hindi.html
@@ -91,7 +91,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="test.html?url=https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1744043422~acl=/*~hmac=e9e70c2664c61bd1f6e076efc88c3635b9c5bc363867890ad3c9c6f18a102976" title="Video Player 2" frameborder="0"
+  <iframe src="test.html?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
