--- a/hindi.html
+++ b/hindi.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>mi vs rcb</h2>
+  <h2>kkr vs lsg</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -138,7 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
       try {
         var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17436002443600~hmac=1fdfe8ddcbf56e3eefcb254f9facdca9e6fce112f92dcf335b77a9a930116421",
+          file: "https://criccoder264.pages.dev/sse.m3u8",
           width: "100%",
           aspectratio: "16:9",
           preload: "metadata",
@@ -156,7 +156,7 @@
           },
           pip: true,
           controls: true,
-          title: "TSPORTS 1",
+          title: "TSPORTS",
           quality: { defaultAuto: true },
         });
       } catch (error) {
