--- a/hindi4k.html
+++ b/hindi4k.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>rr vs pbks</h2>
+  <h2>pbks csk</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -87,11 +87,11 @@
   <br>
 
   <br>
-  <h2>player 2</h2>
+  <h2>player 2 (audio boost in audio setting)</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
+  <iframe src="test.html?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
@@ -107,7 +107,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 5</h2>
+  <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <iframe src="https://ifarma.embedct.space/iframe/frame.php" title="Video Player 3" frameborder="0"
@@ -127,9 +127,9 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>Player 6</h2>
+  <h2>Player 4</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
+  <hr> 
   <div id="wrapper_tsport1">
     <div id="pcPlayer_tsport1"></div>
   </div>
@@ -138,7 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
       try {
         var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8",
+          file: "https://criccoder264.pages.dev/sse.m3u8",
           width: "100%",
           aspectratio: "16:9",
           preload: "metadata",
@@ -156,7 +156,7 @@
           },
           pip: true,
           controls: true,
-          title: "TSPORTS 1",
+          title: "TSPORTS",
           quality: { defaultAuto: true },
         });
       } catch (error) {
@@ -179,11 +179,11 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 7</h2>
+  <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
+  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
@@ -201,7 +201,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 8</h2>
+  <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
