--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/S4gKRSPT/1000113678.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/JWCy5kqz/1000114076.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
   </a>
 
   <a href="hindi4k.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/Dfff9FBm/rrvspbks.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/7xxTCzYg/1000114079.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 2 hindi</div>
     </div>
@@ -98,4 +98,4 @@
   <script src="script.js"></script>
 </body>
 
-</html>
+</html>in 
