--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/JWCy5kqz/1000114076.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.postimg.cc/zXJ6z0WL/Save-Clip-App-488543253-17953442960946521-3641955153751492437-n-640.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
