--- a/hindi.html
+++ b/hindi.html
@@ -91,7 +91,7 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="test.html?url=https://prod-sports-hin-fa.jiocinema.com/hls/live/2117033/inallow-ipl-2025/hin/1540040246/15mindvrm0153748b1625e24a9ebc935a7faca3fe7810april2025/master.m3u8" title="Video Player 2" frameborder="0"
+  <iframe src="test.html?url=https://1a-1791.com/live/3fms19g4/slot-31/qb9o-jtff/chunklist_DVR.m3u8" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
