--- a/player.html
+++ b/player.html
@@ -3,82 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>noobgltch</title>
-    <link rel="stylesheet" href="https://cxh.pages.dev/style.css">
-</head>
-<body>
+    <title>Live Stream</title>
+    <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script>
+    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
     <style>
-        #player {
-            position: absolute;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: black;
+        }
+
+        #player-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000;
+        }
+
+        .jwplayer {
             width: 100% !important;
             height: 100% !important;
         }
+
+        .jwplayer.jw-flag-aspect-mode {
+            min-height: 100%;
+            max-height: 100%;
+        }
     </style>
-
-    <div id="player"></div>
-
-    <script src='https://content.jwplatform.com/libraries/KB5zFt7A.js'></script>
+</head>
+<body>
+    <div id="player-container"></div>
 
     <script>
-        var jwScript = document.createElement('script');
-        jwScript.src = "https://content.jwplatform.com/libraries/KB5zFt7A.js";
-        jwScript.async = true;
-        jwScript.onerror = function() {
-            console.error("Failed to load JW Player library.");
-            document.getElementById("player").innerHTML = "<p>Error loading video player.</p>";
-        };
-        document.head.appendChild(jwScript);
+        // Initialize JW Player
+        const player = jwplayer('player-container').setup({
+            width: "100%",
+            height: "100%",
+            stretching: "uniform",
+            autostart: true,
+            controls: true,
+            file: "https://example.com/lala.php" // Default placeholder URL
+        });
 
-        jwScript.onload = function() {
-            var playerInstance = jwplayer("player").setup({
-                file: "https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002",
-                width: "100%",
-                height: "100%",
-                aspectratio: '16:9',
-                preload: 'metadata',
-                autostart: false,
-                fallback: {
-                    message: "Your browser does not support the video format or the player."
-                },
-                events: {
-                    error: function(e) {
-                        console.error("JW Player error:", e);
-                        alert("A JW Player error occurred: " + e.message);
+        // Check for stream ID parameter
+        const urlParams = new URLSearchParams(window.location.search);
+        const streamId = urlParams.get('id');
+
+        if (streamId) {
+            // Try to load requested stream
+            fetch('https://m-six-pi.vercel.app/api/stream.json')
+                .then(response => response.ok ? response.json() : Promise.reject())
+                .then(streams => {
+                    const stream = streams.find(s => s.id === streamId);
+                    if (stream) {
+                        player.load({
+                            file: stream.m3u8 || stream.mpd,
+                            ...(stream.mpd && stream.key && {
+                                drm: {
+                                    clearkey: {
+                                        keyId: stream.key.split(':')[0].trim(),
+                                        key: stream.key.split(':')[1].trim()
+                                    }
+                                }
+                            })
+                        });
                     }
-                },
-                pip: true,
-                controls: true,
-                title: "star sports 1 hndi" // You might want to update the title too
-            });
-
-            playerInstance.on('controls', function(event) {
-                console.log("Controls event:", event);
-            });
-
-            playerInstance.on('displayClick', function(event) {
-                console.log("displayClick event:", event);
-            });
-
-            playerInstance.on('ready', function(event){
-                console.log("player ready", event);
-            })
-
-            playerInstance.on('visualQuality', function(event){
-                console.log("visual quality changed", event);
-            })
-
-            playerInstance.on('bufferChange', function(event){
-                console.log('buffer change', event);
-            })
-
-            playerInstance.on('metaData', function(event){
-                console.log('meta data', event);
-            })
-
-            playerInstance.on('fullScreen', function(event){
-                console.log('full screen event', event);
-            })
-        };
+                })
+                .catch(() => {
+                    // Log error for debugging
+                    console.error("Error fetching or loading stream data.");
+                });
+        } else {
+            console.log("No 'id' parameter found in the URL, loading default stream.");
+        }
     </script>
 </body>
 </html>
