--- a/hindi.html
+++ b/hindi.html
@@ -138,7 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
       try {
         var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://criccoder264.pages.dev/sse.m3u8",
+          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17436002443600~hmac=1fdfe8ddcbf56e3eefcb254f9facdca9e6fce112f92dcf335b77a9a930116421",
           width: "100%",
           aspectratio: "16:9",
           preload: "metadata",
