--- a/hindi.html
+++ b/hindi.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>rcb vs dc</h2>
+  <h2>csk vs kkr</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -138,7 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
       try {
         var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17436002443600~hmac=1fdfe8ddcbf56e3eefcb254f9facdca9e6fce112f92dcf335b77a9a930116421",
+          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17443778803600~hmac=35d8f03492cf91d3b1098b718e8a30d9362590d6cc0072f8e52c4e0fc0962f26",
           width: "100%",
           aspectratio: "16:9",
           preload: "metadata",
@@ -204,7 +204,7 @@
   <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
-  <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
+  <iframe src="new.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
     allowfullscreen>
   </iframe>
   <br>
