--- a/new.html
+++ b/new.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css">
     <link href="https://cdn.jsdelivr.net/gh/halfmoonui/halfmoon@1.0.4/css/halfmoon.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
-
     <style>
         body {
             background: #121212;
@@ -28,53 +25,32 @@
 <body class="dark-mode with-custom-scrollbars with-custom-css-scrollbars">
 
     <video id="player" controls preload="metadata" class="plyr" allowfullscreen>
-        <source src="https://maxplay-tv.fun/foot.php" type="application/x-mpegURL">
+        <source src="https://maxplay-tv.fun/cric.php?id=starhindi" type="application/x-mpegURL">
     </video>
 
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const videoElement = document.querySelector("video");
-            const videoSource = videoElement.getElementsByTagName("source")[0].src;
+            const playerElement = document.querySelector("#player");
+            const videoSource = playerElement.querySelector("source").src;
+            const player = new Plyr(playerElement);
+            const isHlsSupported = Hls.isSupported();
 
-            if (Hls.isSupported()) {
+            const handleFullscreen = (isFullscreen) => {
+                if (window.screen.orientation?.lock) {
+                    window.screen.orientation.lock(isFullscreen ? 'landscape' : 'portrait').catch(console.error);
+                }
+            };
+
+            player.on('enterfullscreen', () => handleFullscreen(true));
+            player.on('exitfullscreen', () => handleFullscreen(false));
+
+            if (isHlsSupported) {
                 const hls = new Hls({ maxMaxBufferLength: 100 });
                 hls.loadSource(videoSource);
-                hls.attachMedia(videoElement);
-                const player = new Plyr(videoElement);
-
-                hls.on(Hls.Events.ERROR, function (event, data) {
-                    console.error("HLS Error:", data);
-                    // Optionally handle specific HLS errors here
-                });
-
-                // Enable full-screen for Android
-                player.on('enterfullscreen', () => {
-                    if (window.screen.orientation && window.screen.orientation.lock) {
-                        window.screen.orientation.lock('landscape').catch(console.error);
-                    }
-                });
-
-                player.on('exitfullscreen', () => {
-                    if (window.screen.orientation && window.screen.orientation.unlock) {
-                        window.screen.orientation.unlock();
-                    }
-                });
-
-            } else {
-                const player = new Plyr(videoElement);
-
-                // Enable full-screen for Android
-                player.on('enterfullscreen', () => {
-                    if (window.screen.orientation && window.screen.orientation.lock) {
-                        window.screen.orientation.lock('landscape').catch(console.error);
-                    }
-                });
-
-                player.on('exitfullscreen', () => {
-                    if (window.screen.orientation && window.screen.orientation.unlock) {
-                        window.screen.orientation.unlock();
-                    }
-                });
+                hls.attachMedia(playerElement);
+                hls.on(Hls.Events.ERROR, (event, data) => console.error("HLS Error:", data));
             }
         });
     </script>
