--- a/hindi.html
+++ b/hindi.html
@@ -110,8 +110,8 @@
   <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
- <iframe src="https://user4580.ifrem.net/iframe/frame.php" title="Video Player 3" frameborder="0"
-    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  <iframe src="https://user4580.ifrem.net/iframe/frame.php" title="Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
 </iframe>
   <br>
   <br>
@@ -204,9 +204,29 @@
   <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
-  <iframe src="new.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
-    allowfullscreen>
-  </iframe>
+  <iframe src="starsports1hindi.html"Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
+</iframe>
+  <br>
+  <br>
+  <h3>to get latest updates of servers</h3>
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+  </a>
+  <br>
+  <h2>player 7</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
+  <iframe src="starsports1english.html" title="Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
+</iframe>
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
