--- a/hindi.html
+++ b/hindi.html
@@ -91,8 +91,8 @@
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
-  <iframe src="test.html?url=https://1a-1791.com/live/3fms19g4/slot-31/qb9o-jtff/chunklist_DVR.m3u8" title="Video Player 2" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+  <iframe src="test.html?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
+    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
   <h3>to get latest updates of servers</h3>
@@ -184,7 +184,7 @@
   <hr>
 
   <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
   <br>
